appId: com.kanaewvs.snake
---
- launchApp
- assertVisible: "Змейка"
- assertVisible: "Счёт"
- assertVisible: "Рекорд"
- assertVisible: "Старт"
- tapOn: "Старт"
- tapOn: "▼"
- tapOn: "▶"
- tapOn: "◀"
- assertVisible: "Рекорд"
